phalcom-ast/tests/snapshots/parser__braced_block_zero_params.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"{ System.print(\\\"hi\\\") }\")"
---
Program {
    statements: [
        Expr {
            expr: Block(
                BlockExpr {
                    params: [],
                    body: [
                        Expr {
                            expr: MethodCall(
                                MethodCallExpr {
                                    object: Var {
                                        value: "System",
                                        range: CopyRange {
                                            start: 2,
                                            end: 8,
                                        },
                                    },
                                    method: "print",
                                    args: [
                                        Argument {
                                            label: None,
                                            expr: String {
                                                value: "hi",
                                                range: CopyRange {
                                                    start: 15,
                                                    end: 19,
                                                },
                                            },
                                            range: CopyRange {
                                                start: 15,
                                                end: 19,
                                            },
                                        },
                                    ],
                                    range: CopyRange {
                                        start: 2,
                                        end: 20,
                                    },
                                },
                            ),
                            range: CopyRange {
                                start: 2,
                                end: 20,
                            },
                        },
                    ],
                    expr_body: false,
                    range: CopyRange {
                        start: 0,
                        end: 22,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 22,
            },
        },
    ],
}
