phalcom-ast/tests/snapshots/parser__class_declaration_current_limitation.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {}\")"
---
Err: SyntaxError { kind: UnrecognizedToken { token: "", expected: ["newline"] }, range: 14..14 }
