phalcom-ast/tests/snapshots/parser__class_declaration_with_trailing_newline_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {}\\n\")"
---
Program {
    statements: [
        Class(
            ClassDef {
                name: "Point",
                members: [],
                range: CopyRange {
                    start: 0,
                    end: 14,
                },
            },
        ),
    ],
}
