phalcom-ast/tests/snapshots/parser__dangling_attribute_at_end_of_class_is_error.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {\\n  @requires(x > 0)\\n}\\n\")"
---
Err: SyntaxError { kind: Message("attr.dangling: `@requires` has no following method, getter, or setter to attach to"), range: 16..32 }
