phalcom-ast/tests/snapshots/parser__empty_input_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"\")"
---
Program {
    statements: [],
}
