phalcom-ast/tests/snapshots/parser__error_display_is_not_a_panic.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse_display(\"let = \")"
---
Expected identifier (at bytes 4..5)
