phalcom-ast/tests/snapshots/parser__error_display_trailing_garbage.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse_display(\"1 + )\")"
---
Expected one of "true", "false", "nil", "self", "super", identifier, string, number, "(", "!", "-" (at bytes 4..5)
