phalcom-ast/tests/snapshots/parser__error_missing_expression.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let x = \")"
---
Err: SyntaxError { kind: UnrecognizedToken { token: "", expected: ["\"true\"", "\"false\"", "\"nil\"", "\"self\"", "\"super\"", "identifier", "string", "number", "\"(\"", "\"!\"", "\"-\""] }, range: 7..7 }
